--- a/src/component/grid/grid.css
+++ b/src/component/grid/grid.css
@@ -16,13 +16,26 @@
 }
 
 .turn-winner {
-    color: gold;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    color: rgb(255, 217, 1);
     font-size: 2.5rem;
 }
 
 .reset {
+    margin: 0 auto;
     padding: 1.5rem;
     border-radius: 4px;
     border: 1px solid gainsboro;
     font-size: large;
+}
+
+.draw-Text {
+
+    border-bottom: 1px solid #ccc;
+    color: rgb(198, 58, 58);
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
